Fix low contrast in 'Hide search matches' box in dark mode

--- a/napari_sphinx_theme/static/css/napari-sphinx-theme.css
+++ b/napari_sphinx_theme/static/css/napari-sphinx-theme.css
@@ -50,6 +50,7 @@ html[data-theme="dark"] {
     --pst-color-border: var(--napari-gray);
     --pst-color-target: var(--napari-gray);
     --pst-color-secondary-bg: #e0c7ff;
+    --pst-color-primary-text: white;
 }
 
 body {
